# commander-network

./: .gitignore  README.md  TODO.md  cleanup.py  consts.py  downloader.py  log_utils.py  parser.py  pyproject.toml  test_objects.py  utils.py  wiki_gen.py
data/: download_filtered.csv
data/normalized/: battles.csv  battles_enemies.csv  commanders.csv
data/parsed/: parsed_battles.json
data/visualized/triads/: exceptions.txt
data/ww1/_downloader_setup/: download_all.csv  download_combined.csv  download_diff.csv
data/ww2/_downloader_setup/: download_titles.txt
models/: models.py
normalizer/: utils.py
parser/: combatant_parser.py  commander_parser.py  models.py  name_dict.py  parser.py  test_objects.py
src/comnet/: config.py  main.py
src/comnet/downloader/: cleanup.py  consts.py  downloader.py
src/comnet/downloader/ww1/: cleanup.py
src/comnet/downloader/ww2/: download_ww2.py
src/comnet/normalizer/: models.py  normalizer.py  utils.py
src/comnet/normalizer/consts/: country_dict.py  name_dict.py
src/comnet/parser/: combatant_parser.py  commander_parser.py  consts.py  models.py  parser.py
src/comnet/parser/test/: test_commander.py  test_models.py  test_objects.py  test_parser.py
src/comnet/shared/: consts.py  log_utils.py  models.py  utils.py
src/comnet/shared/dicts/: country_dict.py  marshals_dict.py  name_dict.py
src/comnet/visualizer/: analysis_centrality.py  analysis_community.py  analysis_triads.py  basic_stats.py  const.py  full_analysis.py  models.py  plotter.py  utils.py  visualizer.py
tmp/: commander_names.txt  found_duplicates.txt
(+5 files in other folders)
