[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "comnet"
version = "0.1.0"
dependencies = [
    "requests",
    "pandas",
    "mwparserfromhell",
    "pytest",
    "matplotlib",
    "networkx",
    "scipy",
    "scikit-learn"
]

[project.scripts]
comnet-download = "comnet.downloader.downloader:main"
comnet-parse = "comnet.parser.parser:main"
comnet-norm = "comnet.normalizer.normalizer:main"
comnet-viz = "comnet.visualizer.visualizer:main"
comnet-main = "comnet.main:main"